---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
▌@@ -1 +1,2 @@                                                                  |
▌+weehooo                                                                       |
▌ blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1 @@                                                                  |
 -testing                                                                       |
 -testtest                                                                      |
 +blrergh                                                                       |
                                                                                |
 Recent commits                                                                 |
 223428c main add firstfile                                                     |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --reverse --recount                                        |
styles_hash: 94c81e31c9f7cd7c
